# dns-cc

./: .gitignore  CMakeLists.txt  INSTALL  README  Vagrantfile  compress.h  display.h  dns-cc  dns-cc.c  dns.cfg  makefile  nameres.h  ns.txt  sample.msg
extras/cmakeFind/: FindCARES.cmake  FindCRYPTO.cmake
extras/provision/: nameservers.yml  reset-dns.yml  traffic-control.yml
extras/provision/misc/: dnsmasq-auth.conf  kauchman.sudoers  named-cache.conf.options
src/: CMakeLists.txt  dns-cc.c  dns.cfg
src/libs/: CMakeLists.txt  compress.c  compress.h  crc.c  crc.h  crypto.c  crypto.h  display.c  display.h  fec.c  fec.h  nameres.c  nameres.h
